@@ -101,6 +101,10 @@ void CGUIButtonControl::OnAction(const CAction &action)
 //			g_actionManager.CallScriptAction(message);
 		}
 
+		// button selected.
+		// send a message
+		SEND_CLICK_MESSAGE(GetID(), GetParentID(), 0);
+
 		if (m_lHyperLinkWindowID != WINDOW_INVALID)
 		{
 			CGUIWindow *pWindow = m_gWindowManager.GetWindow(m_lHyperLinkWindowID);
@@ -113,10 +117,6 @@ void CGUIButtonControl::OnAction(const CAction &action)
 				m_gWindowManager.ActivateWindow(m_lHyperLinkWindowID);
 			return;
 		}
-		// button selected.
-		// send a message
-		SEND_CLICK_MESSAGE(GetID(), GetParentID(), 0);
-
 	}
 }
 
